* Updated pear/net_smtp from 1.8.0 to 1.8.1.
* Updated cssjanus/cssjanus from 1.2.0 to 1.2.1.
* Updated wikimedia/php-session-serializer from 1.0.6 to 1.0.7.

==== Removed external libraries ====

=== Bug fixes in 1.33 ===
* (T164211) Special:UserRights could sometimes fail with a
  "conflict detected" error when there weren't any conflicts.

=== Action API changes in 1.33 ===
* (T198913) Added 'ApiOptions' hook.
* The JSON formatversion=2 is no longer experimental.
* Internal API errors (those with code beginning "internal_api_error") will
  include the exception class name in a data field named "errorclass".
  * Class names are not guaranteed to remain stable, and in particular database
    exceptions will now include the "Wikimedia\Rdbms\" prefix in the class name.
  * The code including an exception class name is deprecated. In the future,
    all internal errors will use code "internal_api_error".
* (T212356) When using action=delete on pages with many revisions, the module
  may return a boolean-true 'scheduled' and no 'logid'. This signifies that the
  deletion will be processed via the job queue.
* action=setnotificationtimestamp will now update the watchlist asynchronously
  if entirewatchlist is set, so updates may not be visible immediately
* Block info will be added to "blocked" errors from more modules.
* (T216245) Autoblocks will now be spread by action=edit and action=move.

=== Action API internal changes in 1.33 ===
* A number of deprecated methods for API documentation, intended for overriding
  by extensions, are no longer called by MediaWiki, and will emit deprecation
  notices if your extension attempts to use them:
  * ApiBase::getDescription() (deprecated in 1.25)
  * ApiBase::getParamDescription() (deprecated in 1.25)
  * ApiBase::getExamples() (deprecated in 1.25)
  * ApiBase::getDescriptionMessage() (deprecated in 1.30)
  Additionally, the  'APIGetDescription' and 'APIGetParamDescription' hooks have