@@ -91,6 +91,8 @@ production.
 === Bug fixes in 1.33 ===
 * (T164211) Special:UserRights could sometimes fail with a
   "conflict detected" error when there weren't any conflicts.
+* (T216029) Chrome redirects to Special:BadTitle after editing a section with
+  a non-Latin name on a page with non-Latin characters in title.
 
 === Action API changes in 1.33 ===
 * (T198913) Added 'ApiOptions' hook.
